methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:8: error: ';' expected but '=' found.
    new versLAvant:Boolean=false
                          ^